--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Open+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <style>
     * {
       margin: 0;
+      font-family: 'Krona One', sans-serif;
+      font-family: 'Open Sans', sans-serif;
     }
   </style>
   <title>React App</title>
